maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
    setDirection(NORD)
}



def keepHandOnSideWall(){
  while(!estSurBiscuit()){
		droite()
    if(!estFaceMur()){
      avance()
    }
    else{
      gauche()
      if(estFaceMur()){
        gauche()
      }
      else{
        avance()
      }
    }
  }
}

def chercherNord(){
  while(getX()!=0){
    if(!estFaceMur()){
      avance()
    }
    else{
      droite()
    }
  }
}